# tbj-home-base

./: .gitignore  README.md  config.py  input.css  pyproject.toml  requirements.txt  todo.txt
app/: __init__.py  home.py  leaderboard.py  players.py  standings.py  teams.py  utils.py
app/services/: leaderboard.py  mlb_news.py  players.py  standings.py  stats_api.py  teams.py
app/services/players/: __init__.py  cal_rate.py  fetch.py  hitting.py  parse.py  pitching.py  service.py
app/static/css/: styles.css
app/static/js/: script.js
app/templates/: base.html  index.html  leaderboard.html  player.html  standings.html  team.html
app/templates/partials/: division_table.html  hitting_table.html  leader.html  news_item.html  pitching_table.html  player_stats_table.html  recent_games_table.html  teams_dropdown.html
