[project]
name = "tbj-home-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "flask>=3.1.3",
    "lxml>=6.0.4",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
